增加验证码，添加图片

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2048,6 +2048,15 @@ ul.social_icon li a {
     text-transform: uppercase; 
 }
 
+#code{
+	font-family:Arial,宋体;
+	font-style:italic;
+	color:green;
+	border:0;
+	padding:2px 3px;
+	letter-spacing:3px;
+	font-weight:bolder;
+}
 
 .contact-bg {
 	background-color: #f6f6f6f6;
